<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="_3_points">3 points</string>
    <string name="_2_points">2 points</string>
    <string name="free_shot">Free shot</string>
    <string name="_0">0</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="cavaliers">Cavaliers</string>
    <string name="warriors">Warriors</string>
</resources>
